# docs/swagger.yaml
@@ -21,11 +21,19 @@ definitions:
       role:
         $ref: '#/definitions/sql.Role'
     type: object
+  request.AuthSendOTP:
+    properties:
+      phone_number:
+        example: "62895377233002"
+        type: string
+    type: object
   request.AuthVerification:
     properties:
       token:
         example: 2YbPyusF2G06BFQLamoKFXvGgPd
         type: string
+    required:
+    - token
     type: object
   response.AuthVerification:
     properties:
@@ -134,6 +142,33 @@ paths:
       security:
       - AccessToken: []
       summary: Get Auth Me based on parameter
+      tags:
+      - auth
+  /auth/otp:
+    post:
+      consumes:
+      - application/json
+      description: Auth Send OTP
+      operationId: post-auth-send-otp
+      parameters:
+      - description: Data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.AuthSendOTP'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.BaseResponse'
+      summary: Post Auth Send OTP based on parameter
       tags:
       - auth
   /auth/verification:
